[package]
name = "cparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "*", features = ["pretty-print", "fast-line-col"] }
pest_derive = { version = "*", features = ["default"] }
color-eyre = { version = "0.6.2", features = ["color-spantrace", "capture-spantrace"]}


[dev-dependencies]
ariadne = { version = "*" }
